--- a/frontend/src/components/login/style.scss
+++ b/frontend/src/components/login/style.scss
@@ -3,9 +3,9 @@ body {background-color: #f5f5f5;}
   position:fixed;
   top: 50%;
   left: 50%;
-  width:417px;
-  height:630px;
-  margin-top: -20em;
+  width:385px;
+  height:550px;
+  margin-top: -18em;
   margin-left: -13em;
   background-color: white;
   border-radius: 10px;
@@ -47,7 +47,7 @@ body {background-color: #f5f5f5;}
     .forgot{ // Forgot Password
       color: #A7A3FF;
       position: relative;
-      right: -120px;
+      right: -100px;
       font-size: 14px;
       font-family: 'Poppins';
       align-items: end;
@@ -61,8 +61,8 @@ body {background-color: #f5f5f5;}
 
       input {
         margin-top: 6px;
-        min-width: 369px;
-        height: 62px;
+        min-width: 320px;
+        height: 53px;
         padding: 0px 20px;
         font-size: 16px;
         font-family: 'Poppins';
@@ -83,8 +83,8 @@ body {background-color: #f5f5f5;}
       margin-top: 3em;
 
       button {
-        width: 369px;
-        height: 59px;
+        width: 320px;
+        height: 53px;
         display:inline-block;
         padding:0.3em 1.2em;
         margin:0 0.3em 0.3em 0;
@@ -100,6 +100,33 @@ body {background-color: #f5f5f5;}
         border: 0px;
         box-shadow: 0px 0px 10px #6f6cd2;
       }
+    }
+  }
+}
+.base-container-small{
+  position:fixed;
+  top: 50%;
+  left: 50%;
+  width:385px;
+  height:200px;
+  margin-top: 18em;
+  margin-left: -13em;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px grey;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-family: 'Poppins';
+  p{
+    .loginOption{
+      color: #5450bd;
+    }
+    span{
+      font-weight: bold;
+
     }
   }
 }
